feat: add client and admin loan queries
